Fixed scrollbar size not affecting horizontal ones

--- a/res/ui/css/scroll-bar.css
+++ b/res/ui/css/scroll-bar.css
@@ -1,5 +1,6 @@
 ::-webkit-scrollbar {
     width: var(--scrollbar-width);
+    height: var(--scrollbar-width);
 }
 
 ::-webkit-scrollbar-track {
